# Tiny-DuckDB-Projects

./: README.md  conftest.py  pyproject.toml  requirements.txt  run_all_tests.py
01_hello_duck/: README.md  test_hello.py
01_hello_duck/cli/: hello.sql  solution.sql
01_hello_duck/python/: hello.py  solution.py
02_word_counter/: README.md  test_word_counter.py
02_word_counter/cli/: solution.sql  word_counter.sql
02_word_counter/python/: solution.py  word_counter.py
03_csv_detective/: README.md  test_csv_detective.py
03_csv_detective/cli/: csv_detective.sql  solution.sql
03_csv_detective/python/: csv_detective.py  solution.py
04_number_guesser/: README.md  test_number_guesser.py
04_number_guesser/cli/: number_guesser.sql  (+1 more)
05_anagram_checker/: README.md  test_anagram_checker.py
06_picnic_planner/: README.md  test_picnic_planner.py
07_hangman_state/: README.md  test_hangman_state.py
08_blackjack_scorer/: README.md  test_blackjack_scorer.py
09_leaderboard/: README.md  test_leaderboard.py
10_word_ladder/: README.md  test_word_ladder.py
11_sudoku_validator/: README.md  test_sudoku_validator.py
12_json_quest/: README.md  test_json_quest.py
13_data_merge/: README.md  test_data_merge.py
14_treasure_hunt/: README.md  test_treasure_hunt.py
15_text_search/: README.md  test_text_search.py
inputs/: four_letter_words.txt  game_dialogue.csv  game_save.json  sample_scores.csv  sample_text.txt  words.txt
notebooks/: 01_hello_duck.ipynb  02_word_counter.ipynb  03_csv_detective.ipynb  09_leaderboard.ipynb  10_word_ladder.ipynb  12_json_quest.ipynb
(+46 files in other folders)
